--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.project</groupId>
     <artifactId>ShuJuKu</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>salary-manage</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -15,7 +18,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
