--- a/web/.env.development
+++ b/web/.env.development
@@ -1,5 +1,6 @@
 # just a flag
 ENV = 'development'
-
+ 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+# VUE_APP_BASE_API = 'api'
+VUE_APP_BASE_API = 'http://localhost:9000'
