--- a/salary-common/pom.xml
+++ b/salary-common/pom.xml
@@ -12,6 +12,9 @@
         <artifactId>ShuJuKu</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <description>common模块</description>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
