feat(security): 安全框架加入(未投入使用)

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>salary-manage</module>
         <module>salary-common</module>
+        <module>salary-security</module>
     </modules>
 
     <parent>
