--- a/salary-security/pom.xml
+++ b/salary-security/pom.xml
@@ -17,6 +17,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
+        <!--SpringBoot Web-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!--SpringSecurity-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
