--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ target/
 *.iws
 *.iml
 *.ipr
+/.idea/
+
 
 ### Eclipse ###
 .apt_generated
@@ -39,3 +41,4 @@ build/
 
 ###  vue  ###
 **/node_modules/**
+
