--- a/salary-manage/src/main/resources/application-dev.yml
+++ b/salary-manage/src/main/resources/application-dev.yml
@@ -1,4 +1,17 @@
 db:
   url: database_lessons
   dname: root
-  dpwd: 123456
+  dpwd: 1qiulihang
+
+mybatis-plus:
+  configuration:
+    # Mybatis-Plus日志
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      # 逻辑删除
+      logic-delete-field: delFlag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      id-type: auto
+  mapper-locations: classpath:com/hang/mapper/*.xml
